[package]
name = "block_chain_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.114" }

serde = { version = "1.0.197", features = ["derive"] }
sha256 = { version = "1.5.0" }
rs_sha256 = "0.1.3"
