[package]
name = "block_chain_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde_json = { version = "1.0.114" }
serde = { version = "1.0.197", features = ["derive"] }
sha256 = { version = "1.5.0" }
hex = "0.4.3"
anyhow = "1.0.80"
serde_json = "1.0.114"
clap = { version = "4.5.2", features = ["derive"] }
sled = "0.34.7"
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "sync",
    "time",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
bs58 = "0.5.0"
ripemd = "0.1.3"
bip39 = { version = "2.0.0", features = ["all-languages", "rand"] }
bip32 = "0.5.1"
unicode-normalization = "0.1.22"
k256 = "0.13.3"
sha3 = { version = "0.10.8", features = ["asm"] }
bitcoin_hashes = "0.11.0"
